--- a/horo/Cargo.toml
+++ b/horo/Cargo.toml
@@ -12,9 +12,10 @@ swagger=["dep:utoipa"]
 
 [dependencies]
 rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
-serde = { version = "1.0.190", features = ["derive"], optional = true}
-utoipa = {version="4.0.0", optional = true}
+serde = { version = "1.0.193", features = ["derive"], optional = true}
+utoipa = {version="4.1.0", optional = true}
 
 [dev-dependencies]
-dotenv = "0.15.0"
+dotenvy="0.15.7"
+# dotenv = "0.15.0"
 parameterized = "1.1.0"
