--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -5,11 +5,17 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [features]
-swagger = ["dep:utoipa", "dep:utoipa-swagger-ui", "horo/swagger"]
+swagger = [
+    "dep:utoipa",
+    "dep:utoipa-swagger-ui",
+    "horo/swagger",
+    "horo_date_time/swagger",
+]
 cors = ["dep:actix-cors"]
 
 [dependencies]
 horo = { path = "../horo", features = ["serde"] }
+horo_date_time = { path = "../horo_date_time", features = ["serde"] }
 
 actix-cors = { version = "0.7.0", optional = true }
 actix-web = "4.5.1"
