--- a/horo/Cargo.toml
+++ b/horo/Cargo.toml
@@ -7,15 +7,18 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-serde = ["dep:serde"]
-swagger=["dep:utoipa"]
+serde = ["dep:serde", "horo_date_time/serde"]
+swagger = ["dep:utoipa", "horo_date_time/swagger"]
 
 [dependencies]
+horo_date_time = { path = "../horo_date_time" }
+
 rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
-serde = { version = "1.0.197", features = ["derive"], optional = true}
-utoipa = {version="4.2.0", optional = true}
+
+serde = { version = "1.0.197", features = ["derive"], optional = true }
+utoipa = { version = "4.2.0", optional = true }
 
 [dev-dependencies]
-dotenvy="0.15.7"
+dotenvy = "0.15.7"
 # dotenv = "0.15.0"
 parameterized = "1.1.0"
