--- a/horo/Cargo.toml
+++ b/horo/Cargo.toml
@@ -7,11 +7,12 @@ rust-version = "1.70.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-serde = ["dep:serde", "horo_date_time/serde"]
-swagger = ["dep:utoipa", "horo_date_time/swagger"]
+serde = ["dep:serde", "horo_date_time/serde", "geo_position/serde"]
+swagger = ["dep:utoipa", "horo_date_time/swagger", "geo_position/swagger"]
 
 [dependencies]
 horo_date_time = { path = "../horo_date_time" }
+geo_position = { path = "../geo_position" }
 
 rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
 
