增加七政四余

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 
-members = ["horo", "api", "horo_date_time", "geo_position"]
+members = ["horo", "api", "horo_date_time", "geo_position", "qizheng"]
 
 
 [profile.release]
