--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -104,3 +104,4 @@ swe:
     semom48.se1
     sepl_18.se1
     seplm48.se1
+  sefstars: "https://raw.githubusercontent.com/wlhyl/horo/main/sefstars.txt"
