--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,17 +11,24 @@ swagger = [
     "horo/swagger",
     "horo_date_time/swagger",
     "geo_position/swagger",
+    "qizheng/swagger",
+    "lunar_calendar/swagger",
+    "ganzhiwuxing/swagger",
 ]
 cors = ["dep:actix-cors"]
 
 [dependencies]
-horo = { path = "../horo", features = ["serde"] }
 horo_date_time = { path = "../horo_date_time", features = ["serde"] }
 geo_position = { path = "../geo_position", features = ["serde"] }
+horo = { path = "../horo", features = ["serde"] }
+qizheng = { path = "../qizheng", features = ["serde"] }
+
+ganzhiwuxing = { git = "https://github.com/wlhyl/ganzhiwuxin.git", branch = "rust" }
+lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch = "rust" }
 
 actix-cors = { version = "0.7.0", optional = true }
 actix-web = "4.5.1"
-clap = { version = "4.5.1", features = ["derive"] }
+clap = { version = "4.5.2", features = ["derive"] }
 dotenvy = "0.15.7"
 log = "0.4.21"
 log4rs = "1.3.0"
