修正helm chart不能下载恒星表

--- a/chart/templates/deployment-api.yaml
+++ b/chart/templates/deployment-api.yaml
@@ -38,8 +38,7 @@ spec:
             [
               "/bin/sh",
               "-c",
-              "for i in {{ .Values.swe.files }};do wget -O /swe/$i {{ .Values.swe.uri }}/$i;done",
-              "&& wget -O /swe/sefstars.txt {{ .Values.swe.sefstars }}"
+              "for i in {{ .Values.swe.files }};do wget -O /swe/$i {{ .Values.swe.uri }}/$i;done && wget -O /swe/sefstars.txt {{ .Values.swe.sefstars }}"
               ]
           volumeMounts:
             - name: swe
