--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -28,13 +28,13 @@ lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch =
 
 actix-cors = { version = "0.7.0", optional = true }
 actix-web = "4.8.0"
-clap = { version = "4.5.7", features = ["derive"] }
+clap = { version = "4.5.9", features = ["derive"] }
 dotenvy = "0.15.7"
-log = "0.4.21"
+log = "0.4.22"
 log4rs = "1.3.0"
 
-serde = { version = "1.0.203", features = ["derive"] }
-serde_json = "1.0.117"
+serde = { version = "1.0.204", features = ["derive"] }
+# serde_json = "1.0.120"
 
 # swagger
 utoipa = { version = "4.2.3", features = ["actix_extras"], optional = true }
