--- a/horo_date_time/Cargo.toml
+++ b/horo_date_time/Cargo.toml
@@ -12,5 +12,5 @@ swagger=["dep:utoipa"]
 [dependencies]
 rust-swe = { git = "https://github.com/wlhyl/rust-swe.git" }
 
-serde = { version = "1.0.197", features = ["derive"], optional = true}
-utoipa = {version="4.2.0", optional = true}
+serde = { version = "*", features = ["derive"], optional = true}
+utoipa = {version="*", optional = true}
