--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20.14.0 as build-stage
+FROM node:20.18.0 as build-stage
 
 WORKDIR /app
 COPY ./ /app/
@@ -10,7 +10,7 @@ RUN ionic build --prod
 
 RUN gzip /app/www/*js && gzip /app/www/*css #  && gzip /app/www/*html
 
-FROM nginx:1.27.0-alpine
+FROM nginx:1.27.2-alpine
 
 # RUN rm -rf  /usr/share/nginx/html/*
 
@@ -18,3 +18,5 @@ COPY --from=build-stage /app/www/ /usr/share/nginx/html
 
 #Copy default nginx configuration
 COPY ./nginx-custom.conf /etc/nginx/conf.d/default.conf
+
+RUN sed -i 's/worker_processes .*;/worker_processes 1;/' /etc/nginx/nginx.conf
