--- a/geo_position/Cargo.toml
+++ b/geo_position/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "geo_position"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
