为qizheng lunar_mansions补充一些单元测试用例 为calc_distance_star_long编写快照测试

--- a/qizheng/Cargo.toml
+++ b/qizheng/Cargo.toml
@@ -36,3 +36,5 @@ utoipa = { version = "*", optional = true }
 [dev-dependencies]
 dotenvy = "0.15.7"
 parameterized = "2.0.0"
+insta = { version = "1.43.1", features = ["yaml"] }
+serde_json = "1.0.140"
