升级rust 版本，rust依赖

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -29,7 +29,7 @@ lunar_calendar = { git = "https://github.com/wlhyl/lunar-calendar.git", branch =
 
 actix-cors = { version = "0.7.1", optional = true }
 actix-web = "4.11.0"
-clap = { version = "4.5.40", features = ["derive"] }
+clap = { version = "4.5.44", features = ["derive"] }
 dotenvy = "0.15.7"
 log = "0.4.27"
 log4rs = "1.3.0"
@@ -47,4 +47,5 @@ utoipa-swagger-ui = { version = "9.0.2", features = [
 # 验证
 # actix-web-validator = "5.0.1"
 validator = { version = "0.20.0", features = ["derive", "unic"] }
-actix-web-validator = { git = "https://github.com/wlhyl/actix-web-validator.git" }
+actix-web-validator = "7.0.0"
+# actix-web-validator = { git = "https://github.com/wlhyl/actix-web-validator.git" }
